@startuml

skinparam monochrome true
skinparam linetype ortho

package Pitstop.Infrastructure {
    interface IMessageHandlerCallback {
        Task HandleMessageAsync(string messageType, string message);
    }

    interface IMessageHandler {
        void Start(IMessageHandlerCallback callback);
        void Stop();
    }

    class RabbitMQMessageHandler {
    }
}

package CustomerEventHandler {
    class CustomerManager {
        IMessageHandler _messageHandler;
        CustomerManager(IMessageHandler messageHandler)
        Task HandleMessageAsync(string messageType, string message);
    }
}

Pitstop.Infrastructure -[hidden]--> CustomerEventHandler

IMessageHandlerCallback <|-- CustomerManager 
RabbitMQMessageHandler --o CustomerManager 
IMessageHandler <|-- RabbitMQMessageHandler

@enduml